openshift/albumapi-java/deployment-albumapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"albumapi:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"albumapi\")].image"}]'
  labels:
    app: albumapi
    app.kubernetes.io/component: albumapi
    app.kubernetes.io/instance: albumapi
  name: albumapi
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: albumapi
  strategy: {}
  template:
    metadata:
      labels:
        deployment: albumapi
    spec:
      containers:
      - image: 'albumapi:latest'
        name: albumapi
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
