openshift/albumapi-java/service-albumapi.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: albumapi
    app.kubernetes.io/component: albumapi
    app.kubernetes.io/instance: albumapi
  name: albumapi
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: albumapi
  sessionAffinity: None
  type: ClusterIP
