openshift/albumapi-java/route-albumapi.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: albumapi
spec:
  host:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: albumapi
    weight: 100
  wildcardPolicy: None
